--- a/packages/pilot/src/components/DataDisplay/style.css
+++ b/packages/pilot/src/components/DataDisplay/style.css
@@ -16,19 +16,17 @@
 
 .value,
 .title > h2 {
+  font-size: inherit;
   margin: 0;
 }
 
 .title {
+  font-weight: bold;
   height: 18px;
   text-transform: uppercase;
 
-  & h2 {
-    font-size: 14px;
-  }
-
   & > span {
-    color: var(--color-light-chromium-100);
+    font-weight: bold;
     margin-left: calc(var(--spacing-tiny) - 4px);
   }
 }
@@ -36,6 +34,8 @@
 .value {
   align-items: center;
   display: flex;
+  font-weight: bold;
+  margin: var(--spacing-small) 0;
 
   & small {
     font-size: 18px;
@@ -45,8 +45,9 @@
 
   & h3 {
     color: var(--color-light-steel-100);
-    font-size: 28px;
-    margin: 0;
+    font-size: inherit;
+    margin-bottom: 0;
+    margin-top: 0;
   }
 }
 
@@ -62,6 +63,11 @@
   & > * {
     color: var(--color-light-steel-100);
   }
+}
+
+.justify {
+  justify-content: center;
+  height: auto;
 }
 
 .center {
@@ -86,4 +92,20 @@
   & .subtitle {
     text-align: left;
   }
+}
+
+.small {
+  font-size: 12px;
+}
+
+.medium {
+  font-size: 14px;
+}
+
+.large {
+  font-size: 24px;
+}
+
+.huge {
+  font-size: 28px;
 }
