--- a/packages/pilot/src/containers/TransactionDetails/style.css
+++ b/packages/pilot/src/containers/TransactionDetails/style.css
@@ -17,3 +17,14 @@
 .children {
   font-size: 18px;
 }
+
+@media print {
+  aside { 
+    display: none !important; 
+  }
+  .content {
+    display: block;
+    overflow: visible;
+  }
+}
+
