filter: update spacing and flexbox

--- a/packages/pilot/src/containers/Filter/style.css
+++ b/packages/pilot/src/containers/Filter/style.css
@@ -5,6 +5,23 @@
   overflow: initial;
 }
 
+.content {
+  display: flex;
+  flex: 1;
+
+  & > *:not(:first-child) {
+    margin-left: var(--spacing-small);
+  }
+
+  & input {
+    min-width: 322px;
+  }
+
+  &:last-child {
+    justify-content: flex-end;
+  }
+}
+
 .selectedOptionsTitle {
   font-size: 14px;
   text-transform: uppercase;
